Fix spacing problems in application layout [finishes #65061834]

--- a/app/assets/stylesheets/cf-mysql-broker.css
+++ b/app/assets/stylesheets/cf-mysql-broker.css
@@ -1,4 +1,4 @@
-.services-main-wrapper {
+.no-sidebar-main-wrapper {
     margin: 0 20px;
     left: 0;
     right: 0;
